[package]
name = "rocket-governor-derive"
version = "0.0.1-rc.4"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Unmaintained"
documentation = "https://docs.rs/rocket-governor-derive"
homepage = "https://github.com/kolbma/rocket-governor-derive"
repository = "https://github.com/kolbma/rocket-governor-derive"
keywords = ["rocket", "governor", "rate-limit", "rate-limiting", "ratelimit"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
rocket-governor = "^0.0.1-rc.9"
